TimeReport Action buttons  alignment issues
git-svn-id: https://subversion.assembla.com/svn/projectx-0/stable@1852 b02b8b71-e8a6-4a5c-b3be-45d727391186

--- a/Angular4.0/ProjectX/src/css/projectx.css
+++ b/Angular4.0/ProjectX/src/css/projectx.css
@@ -267,7 +267,7 @@ footer{font-size:12px}
 .loginform .alert-danger{padding:6px}
 .datatable-body-cell-label .titlecolumn{text-overflow: ellipsis;overflow: hidden;cursor:pointer;white-space: nowrap;line-height: 16px; position: relative; padding-right: 20px; padding-left: 10px;}
 .titlecolumn{margin:0 0 0 9px}
-.statusbold{font-weight:normal;margin:0 0 0 23px;color:#acacac;font-size: 11px;}
+.statusbold{font-weight:normal;margin:0 0 0 9px;color:#acacac;font-size: 11px;}
 .Normal{color:#eda74c}
 .Highest{color:#ff2200}
 .High{color:#ff7c7c}
@@ -841,11 +841,11 @@ padding-left:0px!important;
 /*end*/
 .ngx-datatable .datatable-body .datatable-body-row > div{display: table!important}
 .assignedto{margin: 0 0 0 16px}
-.story_tasks .prioritycolumn{margin:0 0 0 3px!important}
+/*.story_tasks .prioritycolumn{margin:0 0 0 3px!important}
 .story_tasks .statusbold{margin:0 0 0 13px!important}
 .story_tasks .bucket {margin: 0 0 0 6px!important;}
 .story_tasks .duedate{margin: 0 0 0 3px!important;}
-.story_tasks .assignedto{margin: 0 0 0 8px!important;}
+.story_tasks .assignedto{margin: 0 0 0 8px!important;}*/
 .timelogSuccessMsg{background-color: #dff0d8;border-color: #d6e9c6;color: #3c763d;margin-bottom: 5px;padding: 5px;}
 .timelogpaddingright5{padding-right:5px}
 .yes{cursor: pointer}
@@ -887,15 +887,15 @@ padding-left:0px!important;
 /*.datatable-body-row .datatable-body-cell:nth-child(3){ width:15%!important; }*/
 /*.datatable-header-inner .datatable-header-cell:nth-child(3){ width:15.6%!important; }*/
 
-.datatable-body-row .datatable-body-cell:nth-child(2){ width:410px!important; }
+/*.datatable-body-row .datatable-body-cell:nth-child(2){ width:410px!important; }
 .datatable-body-row .datatable-body-cell:nth-child(3){ width:202.653px!important; }
 
 .ngx-datatable.material .datatable-body .datatable-row-detail {padding:0px 20px 0px 0px!important;}
 /*.sub_rowbg{ width:100%;}*/
 /*.story_tasks .prioritycolumn{ -webkit-margin-left:20px!important; margin-left:15px!important;}*/
-.datatable-row-wrapper .datatable-body-cell:nth-child(2){ width:410px!important; }
+/*.datatable-row-wrapper .datatable-body-cell:nth-child(2){ width:410px!important; }
 .datatable-row-wrapper .datatable-body-cell:nth-child(3){ width:202.653px!important; }
-.datatable-body-cell-label .statusbold { margin-left: 8px!important;}
+.datatable-body-cell-label .statusbold { margin-left: 8px!important;}*/
 
 
 
